# spanisch-flash

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
data/: conjugations.json  por_para.json  vocabulary.json
ressources/dialogos/: 01_saludo_presentacion.aux  01_saludo_presentacion.tex  05_hablar_del_tiempo.tex  09_decir_la_hora.aux  09_decir_la_hora.tex  13_describir_objetos.tex  18_en_el_transporte_publico.tex  23_describir_el_lugar_donde_vives.tex  33_hablar_de_salud_y_ejercicio.aux  33_hablar_de_salud_y_ejercicio.tex  45_hablar_de_medio_ambiente.tex  plantilla_dialogo.tex  uebersicht_dialoge.aux  uebersicht_dialoge.tex  verben_verwendet.md
static/css/: style.css
static/js/: quiz.js
templates/: base.html  dele_b1_info.html  index.html  options.html  por_para_options.html  por_para_quiz.html  quiz.html  vocab_options.html  vocab_quiz.html
tests/: conftest.py  test_conjugations_card_layout.py  test_dele_b1_information_page.py  test_dele_b1_vocab_set.py  test_dialogue_vocab_sets.py  test_settings_persistence.py
utils/: data_validator.py  dialog_vocab_generator.py  settings_store.py
